package softwareengineering.project.model;

public class Person {

    private String firstName;
    private String lastName;
    private int ssNr;

    public Person(String firstName, String lastName, int ssNr) {
        this.firstName = firstName;
        this.lastName = lastName;
        this.ssNr = ssNr;
    }


}
